<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.herohan.uvcapp.activity.MainActivity">

    <item
        android:id="@+id/action_control"
        android:icon="@drawable/ic_action_control"
        android:title="@string/action_control"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_device"
        android:icon="@drawable/ic_action_usb"
        android:title="@string/action_usb"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_safely_eject"
        android:title="@string/action_safely_eject"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_video_format"
        android:title="@string/action_video_format"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rotate_90_CW"
        android:title="@string/action_rotate_90_CW"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rotate_90_CCW"
        android:title="@string/action_rotate_90_CCW"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_flip_horizontally"
        android:title="@string/action_flip_horizontally"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_flip_vertically"
        android:title="@string/action_flip_vertically"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preview_fill_toggle"
        android:title="@string/action_preview_mode_fill"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ndimode"
        android:title="@string/action_ndimode_high"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stream_protocol"
        android:title="@string/action_stream_protocol_ndi"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_stream_destination"
        android:title="@string/action_set_stream_destination"
        android:visible="false"
        app:showAsAction="never" />

    <!-- allow user to change the NDI source name -->
    <item
        android:id="@+id/action_set_ndi_name"
        android:title="@string/action_set_ndi_name"
        android:visible="false"
        app:showAsAction="never" />

    <!-- ── Internal (phone) camera ── -->
    <item
        android:id="@+id/action_use_internal_camera"
        android:title="@string/action_use_internal_camera"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_use_usb_camera"
        android:title="@string/action_use_usb_camera"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_internal_camera"
        android:title="@string/action_select_internal_camera"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_internal_camera_resolution"
        android:title="@string/action_internal_camera_resolution"
        android:visible="false"
        app:showAsAction="never" />

</menu>